--- a/lib/eventasaurus_web/components/layouts/admin.html.heex
+++ b/lib/eventasaurus_web/components/layouts/admin.html.heex
@@ -26,7 +26,7 @@
 
         <!-- Discovery Section -->
         <.sidebar_section title="Discovery">
-          <.sidebar_item path="/admin/imports" label="Imports" icon={:upload} assigns={assigns} />
+          <.sidebar_item path="/admin/discovery" label="Discovery" icon={:upload} assigns={assigns} />
           <.sidebar_item path="/admin/discovery/stats" label="Stats" icon={:document_chart} assigns={assigns} />
           <.sidebar_item path="/admin/discovery/config" label="Config" icon={:cog} assigns={assigns} />
         </.sidebar_section>
@@ -44,6 +44,7 @@
           <.sidebar_item path="/admin/venues/duplicates" label="Venue Duplicates" icon={:duplicate} assigns={assigns} />
           <.sidebar_item path="/admin/images" label="Image Cache" icon={:photograph} assigns={assigns} />
           <.sidebar_item path="/admin/geocoding" label="Geocoding" icon={:globe} assigns={assigns} />
+          <.sidebar_item path="/admin/costs" label="Service Costs" icon={:currency_dollar} assigns={assigns} />
           <.sidebar_item path="/admin/sitemap" label="Sitemap" icon={:map} assigns={assigns} />
         </.sidebar_section>
 
@@ -138,7 +139,7 @@
 
           <!-- Discovery Section -->
           <.mobile_sidebar_section title="Discovery">
-            <.mobile_sidebar_item path="/admin/imports" label="Imports" />
+            <.mobile_sidebar_item path="/admin/discovery" label="Discovery" />
             <.mobile_sidebar_item path="/admin/discovery/stats" label="Stats" />
             <.mobile_sidebar_item path="/admin/discovery/config" label="Config" />
           </.mobile_sidebar_section>
@@ -156,6 +157,7 @@
             <.mobile_sidebar_item path="/admin/venues/duplicates" label="Venue Duplicates" />
             <.mobile_sidebar_item path="/admin/images" label="Image Cache" />
             <.mobile_sidebar_item path="/admin/geocoding" label="Geocoding" />
+            <.mobile_sidebar_item path="/admin/costs" label="Service Costs" />
             <.mobile_sidebar_item path="/admin/sitemap" label="Sitemap" />
           </.mobile_sidebar_section>
 
